[package]
name = "press"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
nom = "7.1.3"
regex = "1.10.0"
shellexpand = "3.1.0"
tempdir = "0.3.7"
triple_accel = "0.4.0"
walkdir = "2.4.0"
